--- a/Restaurant.BLL/Restaurant.BLL.csproj
+++ b/Restaurant.BLL/Restaurant.BLL.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Restaurant.DAL\Restaurant.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
